--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -86,6 +86,7 @@
 	padding: 2px;
 	border-radius: 2px;
 	font-weight: $weight-semi;
+	word-wrap: break-word;
 }
 
 .type-link-white {
@@ -94,6 +95,7 @@
 	padding: 2px;
 	border-radius: 2px;
 	font-weight: $weight-semi;
+	word-wrap: break-word;
 }
 
 .type-center {
